// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VotesFilter should render 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <button
            class="ControlButton__ControlButtonStyled-sc-1l8cuc8-0 ckIXFQ ring-focus"
          >
            <div
              class="flex justify-center items-center w-5 h-5"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  sliders-vertical.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
      </span>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter should render default 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <button
            class="ControlButton__ControlButtonStyled-sc-1l8cuc8-0 ckIXFQ ring-focus"
          >
            <div
              class="flex justify-center items-center w-5 h-5"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  sliders-vertical.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
      </span>
      <div
        class="Dropdown__Wrapper-sc-4ty2ol-0 ihNlLq opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl shadow-votes-filter"
        data-testid="dropdown__content"
        style="opacity: 1; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="flex flex-col items-start py-7 px-10 space-y-5 w-56 text-theme-secondary-700 dark:text-theme-secondary-200"
          >
            <label
              class="flex items-center space-x-3 h-5 rounded-md cursor-pointer"
              data-testid="VotesFilter__option--all"
            >
              <input
                checked=""
                class="Checkbox-sc-1aq7nos-0 gdmzcT"
                color="success"
                name="all"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                All
              </span>
            </label>
            <label
              class="h-5 flex items-center space-x-3 rounded-md cursor-pointer"
              data-testid="VotesFilter__option--current"
            >
              <input
                class="Checkbox-sc-1aq7nos-0 gdmzcT"
                color="success"
                name="current"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                Current Votes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter should render with current option selected 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <button
            class="ControlButton__ControlButtonStyled-sc-1l8cuc8-0 ckIXFQ ring-focus"
          >
            <div
              class="flex absolute top-0.5 right-1 justify-center items-center w-3 h-3 rounded-full transition-all duration-100 ease-linear bg-theme-background"
            >
              <div
                class="w-2 h-2 rounded-full bg-theme-primary-500"
              />
            </div>
            <div
              class="flex justify-center items-center w-5 h-5"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  sliders-vertical.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
      </span>
      <div
        class="Dropdown__Wrapper-sc-4ty2ol-0 ihNlLq opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl shadow-votes-filter"
        data-testid="dropdown__content"
        style="opacity: 1; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="flex flex-col items-start py-7 px-10 space-y-5 w-56 text-theme-secondary-700 dark:text-theme-secondary-200"
          >
            <label
              class="flex items-center space-x-3 h-5 rounded-md cursor-pointer"
              data-testid="VotesFilter__option--all"
            >
              <input
                class="Checkbox-sc-1aq7nos-0 gdmzcT"
                color="success"
                name="all"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                All
              </span>
            </label>
            <label
              class="h-5 flex items-center space-x-3 rounded-md cursor-pointer"
              data-testid="VotesFilter__option--current"
            >
              <input
                checked=""
                class="Checkbox-sc-1aq7nos-0 gdmzcT"
                color="success"
                name="current"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                Current Votes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`VotesFilter should render with disabled current option 1`] = `
<DocumentFragment>
  <div
    data-testid="VotesFilter"
  >
    <div
      class="relative"
    >
      <span
        data-testid="dropdown__toggle"
      >
        <div
          class="group"
        >
          <button
            class="ControlButton__ControlButtonStyled-sc-1l8cuc8-0 ckIXFQ ring-focus"
          >
            <div
              class="flex justify-center items-center w-5 h-5"
            >
              <div
                class="sc-bdvvtL qGXhc"
                height="20"
                width="20"
              >
                <svg>
                  sliders-vertical.svg
                </svg>
              </div>
            </div>
          </button>
        </div>
      </span>
      <div
        class="Dropdown__Wrapper-sc-4ty2ol-0 ihNlLq opacity-0 mt-3 py-3 absolute z-10 bg-theme-background rounded-xl shadow-xl shadow-votes-filter"
        data-testid="dropdown__content"
        style="opacity: 1; height: -30px; overflow-y: scroll;"
      >
        <div>
          <div
            class="flex flex-col items-start py-7 px-10 space-y-5 w-56 text-theme-secondary-700 dark:text-theme-secondary-200"
          >
            <label
              class="flex items-center space-x-3 h-5 rounded-md cursor-pointer"
              data-testid="VotesFilter__option--all"
            >
              <input
                checked=""
                class="Checkbox-sc-1aq7nos-0 gdmzcT"
                color="success"
                name="all"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                All
              </span>
            </label>
            <label
              class="h-5 flex items-center space-x-3 rounded-md text-theme-secondary-500 dark:text-theme-secondary-700"
              data-testid="VotesFilter__option--current"
            >
              <input
                class="Checkbox-sc-1aq7nos-0 gdmzcT"
                color="success"
                disabled=""
                name="current"
                type="checkbox"
              />
              <span
                class="text-base font-medium"
              >
                Current Votes
              </span>
            </label>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
